<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheets_background">

    <TextView
        android:id="@+id/bottomTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottomModify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bottom_sheets_modify"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/bottomTitle"
        app:layout_constraintStart_toStartOf="@+id/bottomTitle"
        app:layout_constraintTop_toBottomOf="@+id/bottomTitle" />

    <TextView
        android:id="@+id/bottomDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bottom_sheets_delete"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottomModify"
        app:layout_constraintStart_toStartOf="@+id/bottomModify"
        app:layout_constraintTop_toBottomOf="@+id/bottomModify" />

</androidx.constraintlayout.widget.ConstraintLayout>