<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.kanneki.moneybook.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?android:attr/statusBarColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedCorner" />

        <TextView
            android:id="@+id/home_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:gravity="right|end"
            android:text="@={vm.todayMoney}"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/home_today_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_month_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/home_today"
            app:layout_constraintStart_toStartOf="@+id/home_today" />

        <TextView
            android:id="@+id/home_month_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/home_month_record"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/home_today_title"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2" />

        <TextView
            android:id="@+id/home_month_record_sum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_stroke"
            android:gravity="end"
            android:padding="5dp"
            android:text="@={vm.monthExpenditureMoney}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/home_today"
            app:layout_constraintStart_toStartOf="@+id/home_month_record"
            app:layout_constraintTop_toBottomOf="@+id/home_month_record" />

        <TextView
            android:id="@+id/home_month_income_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/home_month_income"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/home_month_record"
            app:layout_constraintTop_toBottomOf="@+id/home_month_record_sum" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_stroke"
            android:gravity="end"
            android:padding="5dp"
            android:text="@={vm.monthIncomeMoney}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/home_month_record_sum"
            app:layout_constraintStart_toStartOf="@+id/home_month_record"
            app:layout_constraintTop_toBottomOf="@+id/home_month_income_title" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="@{vm::goModifyRecord}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/action_settings"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
