<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <import type="androidx.appcompat.app.AppCompatActivity" />
        <variable
            name="vm"
            type="com.kanneki.moneybook.ui.modifyrecord.ModifyRecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorButtonNormal"
        app:revealEffectReveal="@{true}">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_orange_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/submit"
            android:onClick="@{()->vm.submitData()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/editTextDate2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edittext_stroke"
            android:gravity="center"
            android:onClick="@{vm.showDialog}"
            android:text="@{vm.recordDate ?? @string/record_date_hilt}"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/dateIcon"
            app:layout_constraintEnd_toEndOf="@+id/price_textInput"
            app:layout_constraintStart_toEndOf="@+id/dateIcon"
            app:layout_constraintTop_toTopOf="@+id/dateIcon" />

        <EditText
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_stroke"
            android:gravity="start|top"
            android:hint="@string/note_hint"
            android:text="@={vm.note}"
            android:importantForAutofill="no"
            android:inputType="none"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/price_textInput"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/price_Icon"
            android:layout_width="@dimen/icon_margin"
            android:layout_height="@dimen/icon_margin"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_attach_money"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/itemIcon"
            android:layout_width="@dimen/icon_margin"
            android:layout_height="@dimen/icon_margin"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="@+id/price_Icon"
            app:layout_constraintTop_toBottomOf="@+id/price_Icon"
            app:srcCompat="@drawable/ic_wysiwyg" />

        <ImageView
            android:id="@+id/dateIcon"
            android:layout_width="@dimen/icon_margin"
            android:layout_height="@dimen/icon_margin"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/price_Icon"
            app:layout_constraintTop_toBottomOf="@+id/itemIcon"
            app:srcCompat="@drawable/ic_date_range"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/foldIcon"
            android:layout_width="@dimen/icon_margin"
            android:layout_height="@dimen/icon_margin"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="@+id/price_Icon"
            app:layout_constraintTop_toBottomOf="@+id/dateIcon"
            app:srcCompat="@drawable/ic_folder" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/icon_margin"
            android:layout_height="@dimen/icon_margin"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="@+id/price_Icon"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_notes" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{()->vm.qrcodeScanner()}"
            android:contentDescription="@string/app_name"
            android:visibility="@{vm.isIncome ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_qr_code_scanner" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/icon_margin"
            android:layout_height="@dimen/icon_margin"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            android:visibility="@{vm.isIncome ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@+id/price_Icon"
            app:layout_constraintTop_toBottomOf="@+id/foldIcon"
            app:srcCompat="@drawable/ic_fact_check" />

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/edittext_stroke"
            android:gravity="center_horizontal|center_vertical"
            android:paddingEnd="10dp"
            android:text="@{vm.recordType ?? @string/sort}"
            android:onClick="@{vm.openSelectTypeDialog}"
            android:textSize="18sp"
            app:drawableEndCompat="@android:drawable/arrow_down_float"
            app:layout_constraintBottom_toBottomOf="@+id/foldIcon"
            app:layout_constraintEnd_toEndOf="@+id/price_textInput"
            app:layout_constraintStart_toEndOf="@+id/foldIcon"
            app:layout_constraintTop_toTopOf="@+id/foldIcon"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{vm.isIncome ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/item_textinput"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="@{vm.receipt}"
                android:hint="@string/report" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:tint="@color/white"
            android:onClick="@{() -> vm.setFinishBlock(true)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_textInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/price_Icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:background="@android:color/holo_orange_dark"
                android:hint="@string/price"
                android:text="@={vm.money}"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_textinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/itemIcon"
            app:layout_constraintEnd_toEndOf="@+id/price_textInput"
            app:layout_constraintStart_toEndOf="@+id/itemIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/record_item_name"
                android:text="@={vm.itemName}"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>



